examples/test/testpolicy4657.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4657
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key22: value32
      key17: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value4
      podSelector:
        matchLabels:
          key16: value19
          key12: value27
          key18: value4
